fixed asset loading bug